# poetry-module-01

src/: pyproject.toml
src/common/util/: azure_locations.py  name_generator.py  resources_list.py
